# BMP_image_processor

./: README.md
tasks/image_processor/: CMakeLists.txt  application.cpp  application.h  bmp.cpp  bmp.h  bmp_stream.cpp  bmp_stream.h  clp.cpp  clp.h  color_matrix.cpp  color_matrix.h  filter_factory .cpp  filter_factory .h  filter_factory.cpp  filter_factory.h  filter_setting.h  image_processor.cpp  pipeline.cpp  pipeline.h
tasks/image_processor/Filters/: basic_filter.cpp  basic_filter.h  blur_filter.cpp  blur_filter.h  crop_filter.cpp  crop_filter.h  edge_detection.cpp  edge_detection.h  genius_filter.cpp  genius_filter.h  grayscale.cpp  grayscale.h  negative_filter.cpp  negative_filter.h  sharping_filter.cpp  sharping_filter.h
tasks/rational/: rational.cpp  rational.h
